gconvert: fix redundant-decls of _g_charset_get_aliases()

_g_charset_get_aliases() is already declared in gcharsetprivate.h
which was added by commit 4c2a6595889eff44fa, and gconvert.c includes
this gcharsetprivate header, so no need to declare it again.

Signed-off-by: Djalal Harouni <tixxdz@opendz.org>

https://bugzilla.gnome.org/show_bug.cgi?id=710345